<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@drawable/bg_round_corner_layout_food_log"
    android:paddingHorizontal="16dp"
    android:paddingVertical="24dp">

    <TextView
        android:id="@+id/tvFoodLogTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/slate_gray"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="12:30" />

    <TextView
        android:id="@+id/tvFoodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/food_name"
        android:textColor="@color/gunmetal_blue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFoodLogTime" />

    <TextView
        android:id="@+id/tvFoodAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="4dp"
        android:text="@string/food_calorie"
        android:textAlignment="textStart"
        android:textColor="@color/gunmetal_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/imgDeleteFoodLog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFoodName" />

    <ImageView
        android:id="@+id/imgDeleteFoodLog"
        android:contentDescription="@string/delete_food_log"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>