<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ghost_white"
    tools:context=".view.fragment.TodayFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardTodayData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTodayDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12/3/2025"
                android:textColor="@color/gunmetal_blue"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvTodayTotalCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:text="@string/today_total_calories"
                android:textColor="@color/gunmetal_blue"
                android:textSize="16sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvTodayFoodLogs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/today_food_logs"
        android:textColor="@color/gunmetal_blue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardTodayData" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recTodayData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:clipToPadding="false"
        android:paddingBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTodayFoodLogs"
        tools:listitem="@layout/layout_rec_food_log" />

    <TextView
        android:id="@+id/tvEmptyList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:textSize="16sp"
        android:visibility="gone"
        android:textColor="@color/gunmetal_blue"
        android:gravity="center"
        android:text="@string/empty_food_log_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTodayFoodLogs" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabOpenBottomSheetFoodLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:backgroundTint="@color/medium_orchid"
        android:contentDescription="@string/open_food_log_bottom_sheet"
        android:src="@drawable/ic_add"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearance="@style/fab_rounded"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>